--- a/style.css
+++ b/style.css
@@ -39,11 +39,11 @@ body{
 }
 
 .div1 .custom-button {
-    height: 5rem;
-     width: 18rem;
+    height: 4.4rem;
+     width: 16rem;
      font-size: 1.4rem;
      font-family:Arial, Helvetica, sans-serif; 
-     margin-left: 28rem;
+     margin-left: 28.7rem;
      margin-top: 3rem;
     
 
@@ -70,4 +70,66 @@ body{
     margin-left: 22.5rem;
     margin-top: 3rem;
    
+}
+
+
+/* 
+
+.................... */
+
+.div22{
+    height: 27rem;
+    width: 46rem;
+    
+    margin-top: 4rem;
+    margin-left: 15rem;
+    display: flex;
+}
+
+.div221{
+    height: 27rem;
+    width: 17rem;
+    background-color: skyblue;
+    
+}
+
+.div222{
+    height: 27rem;
+    width: 29rem;
+    background-color:white;
+}
+
+
+
+
+
+.para11{
+    margin-top: 1.6rem;
+    margin-left: 2rem;
+}
+
+.para12{
+
+    margin-left: 1.7rem;
+    font-size: 0.9rem;
+    font-family:"Dosis";
+}
+
+.para13{
+    margin-top: 1.6rem;
+    margin-left: 2rem;
+}
+
+
+
+/* 
+..................... */
+
+.prof{
+    height: 5rem;
+    width: 5rem;
+    border-radius: 50%;
+    background-color: pink;
+    margin-left:5.5rem;
+    margin-top: 1rem;
 }
