--- a/form.css
+++ b/form.css
@@ -18,20 +18,26 @@ body{
 .main{
     width: 100%;
     height: 100vh;
+    overflow: hidden;
     
 }
 
 .div1{
-    height: 50rem;
+    height: 100Vh;
     width: 80%;
-    background-color:rgb(165, 210, 228);
+    background-color: rgb(250, 250, 250);
     margin-left: 8rem;
-    margin-top: 5rem;;
+    margin-top: 4rem;
+    
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+    overflow: scroll;
 }
 
 
-.ss{
-    height: 3rem;
-    width: 3rem;
-}
+h3{
+    margin-left: 25rem;
+    font-family: "Dosis";
+    color: violet;
 
+    
+}
